data/derived/fa15/progs/unify/prog0613.ml.out
Characters 25-26:
  let fn = pipe [(fun x -> x+x)];;
                           ^
Error: This expression has type 'a -> 'a
       but an expression was expected of type int
